AI関連サービスおよびコントローラのリファクタリング
- OpenAI APIキーの新しいプロパティキーを使用するように AiQuotaController を更新
- 未使用の依存関係とコメントアウトされたコードを削除し、TaskAiController を整理
- 日付フォーマットの統一を目的に、TaskController が生の Task ではなく構造化された TaskResponse を返すように改善
- 柔軟性とエラーハンドリング向上のため、OpenAiDecomposeService をリファクションし、Spring AI の ChatModel をリフレクション経由で利用
- ログ出力・エラーハンドリング・タスク生成ロジック（タイトル／説明の正規化含む）を改善するため、OpenAiTaskService を修正
- サブタスク生成で OpenAiTaskService を利用するよう TaskService を更新し、ログとエラーハンドリングを強化
- タスク作成および AI 分解時のエラーメッセージとデバッグ情報を改善するため、Dashboard コンポーネントを強化